# rustyrpc

./: Cargo.toml  LICENSE  Makefile.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
rustyrpc/: Cargo.toml
rustyrpc/examples/: client.rs  server.rs
rustyrpc/examples/common/: auth_service.rs  hello_service.rs  mod.rs
rustyrpc/src/: client.rs  error.rs  format.rs  lib.rs  multipart.rs  protocol.rs  server.rs  service.rs  transport.rs  utils.rs
rustyrpc/src/format/: rkyv.rs
rustyrpc/src/format/rkyv/: implementation.rs  protocol.rs
rustyrpc/src/format/rkyv/protocol/: error.rs  request_kind.rs  result.rs  service_found.rs  service_kind.rs  service_ref.rs
rustyrpc/src/multipart/: received.rs  sendable.rs
rustyrpc/src/server/: builder.rs  call_handler.rs  call_stream.rs  client_connection.rs  private_service.rs  task_pool.rs
rustyrpc/src/server/private_service/: allocator.rs  service_ref.rs
rustyrpc/src/transport/: quic.rs
rustyrpc/src/transport/quic/: connection.rs  listener.rs  stream.rs
rustyrpc/src/transport/quic/connection/: client.rs  server.rs  stream_pool.rs
