[package]
name = "rustyrpc"
version = "0.1.0"
description = "RPC for Rust"
keywords = ["rpc", "network", "async"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/AlexSherbinin/rustyrpc"
readme = "../README.md"
license = "MIT"
edition = "2021"

[features]

[dependencies]
anyhow = "1.0.79"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.77"
boxcar = "0.2.4"
derive-where = "1.2.7"
extension-traits = "1.0.1"
flume = { version = "0.11.0", features = ["async"] }
futures = "0.3.30"
indexmap = "2.2.3"
log = "0.4.20"
quinn = { version = "0.10.2" }
rkyv = { version = "0.7.43", features = ["validation"] }
sealed = "0.5.0"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["io-util"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"
rcgen = "0.12.1"
rustls = { version = "0.21.10", features = ["quic", "dangerous_configuration"] }
tokio = { version = "1.36.0", features = ["full"] }
